Creating dialog to create catalog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,10 @@
     <string name="log_in">log in</string>
     <string name="create_acc">create</string>
     <string name="add_catalog">Add Catalog</string>
+    <string name="catalog_dialog">New Catalog</string>
+    <string name="start_date">Start Date</string>
+    <string name="catalog_name">Name</string>
+    <string name="end_date">End Date</string>
+    <string name="accept_button">accept</string>
+    <string name="back_button">back</string>
 </resources>
