--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="log_in">log in</string>
     <string name="create_acc">create</string>
     <string name="add_item">Add Item</string>
+    <string name="catalogs_title">Catalogs</string>
     <string name="catalog_dialog">New Catalog</string>
     <string name="start_date">Start Date</string>
     <string name="catalog_name">Name</string>
