--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,12 @@
     <string name="receipt_name">Receipt Name</string>
     <string name="date_edit">Date</string>
     <string name="price_edit">Price</string>
+    <string name="select_all">Select All</string>
+    <string name="sort_by_price">Sort By Price</string>
+    <string name="sort_by_name">Sort By Name</string>
+    <string name="select_biggest_price">Select Biggest Price</string>
+    <string name="category_hint">Category...</string>
+    <string name="sort_by_category">Sort By Category</string>
+    <string name="select_category">Select Category</string>
+    <string name="select_name">Select Name</string>
 </resources>
